--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@reown/appkit": "^1.8.2",
     "@reown/appkit-adapter-wagmi": "^1.8.2",
+    "@reown/appkit-siwe": "^1.8.2",
     "@tanstack/react-query": "^5.86.0",
     "@tanstack/react-query-devtools": "^5.86.0",
     "class-variance-authority": "^0.7.1",
@@ -23,6 +24,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
+    "next-auth": "5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "^19.1.1",
