--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint:fix": "eslint --fix"
   },
   "dependencies": {
+    "@dicebear/collection": "^9.2.4",
+    "@dicebear/core": "^9.2.4",
     "@hookform/resolvers": "^5.2.1",
     "@reown/appkit": "^1.8.2",
     "@reown/appkit-adapter-wagmi": "^1.8.2",
