--- a/package.json
+++ b/package.json
@@ -12,35 +12,20 @@
   "dependencies": {
     "@dicebear/collection": "^9.2.4",
     "@dicebear/core": "^9.2.4",
-    "@hookform/resolvers": "^5.2.1",
     "@reown/appkit": "^1.8.2",
     "@reown/appkit-adapter-wagmi": "^1.8.2",
-    "@reown/appkit-siwe": "^1.8.2",
     "@tanstack/react-query": "^5.86.0",
-    "@tanstack/react-query-devtools": "^5.86.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
-    "embla-carousel-react": "^8.6.0",
-    "input-otp": "^1.4.2",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
-    "next-auth": "5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "^19.1.1",
-    "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.1",
-    "react-hook-form": "^7.62.0",
-    "react-resizable-panels": "^3.0.5",
-    "recharts": "3.1.2",
-    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "vaul": "^1.1.2",
     "viem": "^2.37.3",
-    "wagmi": "^2.16.9",
-    "zod": "^4.1.5"
+    "wagmi": "^2.16.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
