--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,19 +19,19 @@ jobs:
       - uses: actions/checkout@v5
         with:
           submodules: recursive
-      
+
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
-      
+
       - name: Show Forge version
         run: forge --version
-      
+
       - name: Run Forge fmt
         run: forge fmt --check
-      
+
       - name: Run Forge build
         run: forge build --sizes
-      
+
       - name: Run Forge tests
         id: tests
         run: forge test -vvv
@@ -41,45 +41,36 @@ jobs:
     runs-on: ubuntu-latest
     needs: smart-contract
     if: needs.smart-contract.outputs.contract-tests-passed == 'true'
-    defaults:
-      run:
-        working-directory: frontend
     steps:
       - uses: actions/checkout@v5
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v5
         with:
           node-version: '22'
-      
-      - name: Install pnpm
+
+      - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-            version: 10
-      
+          version: latest
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-      
+
       - name: Echo and set environment variables
         run: |
           echo "Setting up environment variables from FE_ENV secret..."
           echo "${{ secrets.FE_ENV }}" >> $GITHUB_ENV
           echo "Environment variables have been loaded."
-      
+
       - name: Run TypeScript check
         run: pnpm type-check
-      
+
       - name: Run ESLint
         run: pnpm lint
-      
+
       - name: Run tests
         run: pnpm test
-      
+
       - name: Build application
         run: pnpm build
-      
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend-build
-          path: frontend/.next
