--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "next": "15.5.2",
     "next-intl": "^4.3.6",
     "next-themes": "^0.4.6",
-    "radix-ui": "^1.4.3",
+    "radix-ui": "latest",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "sonner": "^2.0.7",
